# fxabot

./: Cargo.toml  Procfile  README.md  app.json
deploy/: heroku.sh
examples/: config.toml
src/: config.rs  lib.rs  main.rs
src/bot/: client.rs  mod.rs  work.rs
src/bot/server/: mod.rs
src/bot/server/routes/: github.rs  mod.rs  ping.rs
tests/: gistfile1.txt  github.rs  utils.rs
