[package]
name = "fxabot"
version = "0.1.0"
authors = ["Sean McArthur <sean.monstar@gmail.com>"]

[dependencies]
env_logger = "0.3"
futures = "0.1"
hmac-sha1 = "0.1"
hyper = { git = "https://github.com/hyperium/hyper" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
log = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
tokio-core = "0.1"
toml = "0.3"
